# AvalonCPP

./: .gitignore  .gitmodules  .travis.yml  Avalon.sln  Avalon.sln.DotSettings  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  TODO.txt  appveyor.yml  cert-public.pem  conanfile.txt  generate-projects.bat  premake5.lua
App/: App.vcxproj  App.vcxproj.filters  AvalonProfile-Runtime.json  AvalonProfile-Shutdown.json  AvalonProfile-Startup.json  imgui.ini
Assets/: plattform.cfg
Avalon/: Avalon.vcxproj  Avalon.vcxproj.filters
Avalon.Auth/: Avalon.Auth.csproj  Program.cs  settings.json
Avalon.Common/: Avalon.Common.csproj
Avalon.ConsoleTests/: Class1.cs
Avalon.Core/: Avalon.Core.csproj
Avalon.World/: Avalon.World.csproj  Program.cs  settings.json
AvalonEngine/: AvalonEngine.vcxproj  AvalonEngine.vcxproj.filters  CMakeLists.txt  Class.hpp  Enemy.cpp  Enemy.hpp  GameState.cpp  GameState.hpp  Locator.cpp  Locator.hpp  Player.cpp  Player.hpp
AvalonPlattform/: AvalonPlattform.vcxproj  AvalonPlattform.vcxproj.filters  CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp
CMake/: genrev.cmake  revision.h.in.cmake
OLD/: .travis.yml  CMakeLists.txt
docs/: BUGS.txt  CODE_OF_CONDUCT.md  TODO.txt
old/: CMakeLists.txt
old/src/app/: CMakeLists.txt
old/src/app/shaders/: colorShading.vert  lightShading.frag  lightShading.vert  mapShading.frag  mapShading.vert  torchShading.frag
old/src/app/src/: EncodingUtils.h  Game.h  NetworkDaemon.cpp  NetworkDaemon.h  backward.cpp  backward.hpp  main.cpp  revision.h
old/src/app/src/Scenes/: MapScene.h  Scene.h  TestingScene.h
old/src/proto/: CMakeLists.txt
old/src/proto/include/Proto/: CAuthPacket.pb.h  CAuthPatchPacket.pb.h  CChatMessagePacket.pb.h  CHandshakePacket.pb.h  CPingPacket.pb.h  CPongPacket.pb.h  CRequestServerInfoPacket.pb.h  SCharacterCreatedPacket.pb.h  SCharacterListPacket.pb.h  SMapTeleportPacket.pb.h  SOpenChatPacket.pb.h  SPlayerConnectedPacket.pb.h  SRegisterResultPacket.pb.h  SServerInfoPacket.pb.h  network-packet.pb.h
old/src/proto/src/: CAudioRecordPacket.pb.cc  CAuthPacket.pb.cc  CAuthPatchPacket.pb.cc  CCharacterCreatePacket.pb.cc  CCharacterDeletePacket.pb.cc  CCharacterListPacket.pb.cc  CChatMessagePacket.pb.cc  CHandshakePacket.pb.cc  CInteractPacket.pb.cc  CLogoutPacket.pb.cc  CPingPacket.pb.cc  CPongPacket.pb.cc  CQuestStatusPacket.pb.cc  CRegisterPacket.pb.cc  SAudioRecordPacket.pb.cc  SCharacterDeletedPacket.pb.cc  SCharacterListPacket.pb.cc  SCharacterSelectedPacket.pb.cc  SHandshakeResultPacket.pb.cc  SNpcUpdatePacket.pb.cc  SOpenChatPacket.pb.cc  SPingPacket.pb.cc  network-packet.pb.cc
proto/: CAudioRecordPacket.proto  CAuthPatchPacket.proto  CCharacterDeletePacket.proto  (+24 more)
src/AvalonPlattform/: CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp
src/Server/UI/: CMakeLists.txt
src/Server/UI/src/: main.cpp  mainwindow.cpp  mainwindow.h
src/app/: CMakeLists.txt
src/app/shaders/: Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.glsl  colorShading.frag  colorShading.vert
src/app/src/: AvalonGame.h  EncodingUtils.h  Game.cpp  Game.h  NetworkDaemon.cpp  NetworkDaemon.h  TLSClient.cpp  TLSClient.h  main.cpp
src/app/src/Scenes/: MapScene.h  Scene.h  SceneManager.h  TestingScene.h
src/common/: CMakeLists.txt
src/common/include/Common/: GitRevision.h  Types.h
src/common/include/Common/Asio/: IpAddress.h
src/common/include/Common/Crypto/: CryptoSession.h
src/common/include/Common/Debugging/: Assert.h  Errors.h
src/common/include/Common/Logging/: Appender.h  AppenderConsole.h  LogCommon.h  LogMessage.h  LogOperation.h  Logger.h
src/common/include/Common/Utilities/: FileUtils.h  JsonUtils.h  MessageBuffer.h  Random.h  RingBuffer.h  StringConvert.h  Timer.h  Tokenize.h  Util.h
src/common/src/Crypto/: CryptoSession.cpp
src/common/src/Debugging/: Errors.cpp
src/common/src/Logging/: Appender.cpp  AppenderConsole.cpp  Log.cpp  LogMessage.cpp  Logger.cpp
src/common/src/Utilities/: StringFormat.cpp  Tokenize.cpp
src/engine/: CMakeLists.txt
src/engine/include/Engine/: Settings.h
src/engine/include/Engine/Audio/: AudioDecoder.h  AudioEncoder.h  AudioManager.h
src/engine/include/Engine/Core/: Application.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  MouseCodes.h  Timestep.h  Window.h
src/engine/include/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/engine/include/Engine/Graphics/: AssetManager.h  Camera2D.h  Entity.h  EntityRenderer.h  GraphicsContext.h  Light.h  OrthographicCamera.h  OrthographicCameraController.h  Player.h  Projectile.h  ProjectileRenderer.h  SpriteBatch.h  SpriteSheet.h
src/engine/include/Engine/Graphics/Entities/: Enemy.h  Entity.h  Player.h  Projectile.h
src/engine/include/Engine/Graphics/GameObjects/: GameObject.h
src/engine/include/Engine/Graphics/GameObjects/Entities/: Entity.h  Player.h  Torch.h
src/engine/include/Engine/Graphics/GameObjects/Lights/: Light.h
src/engine/include/Engine/Graphics/Maps/: MapLayer.h
src/engine/include/Engine/Graphics/Raw/: IndexBuffer.h  OpenGLBuffer.h  Shader.h  Sprite.h  SubTexture2D.h  Texture2D.h  UniformBuffer.h  Vertex.h  VertexArray.h  VertexBuffer.h
src/engine/include/Engine/Graphics/Renderers/: EntityRenderer.h  GameObjectRenderer.h  LightRenderer.h  MapRenderer.h  ProjectileRenderer.h  Renderer.h  Renderer2D.h  RendererAPI.h
src/engine/include/Engine/ImGui/: ImGuiLayer.h
src/engine/include/Engine/Input/: InputManager.h
src/engine/src/Audio/: AudioManager.cpp  Settings.cpp
src/engine/src/Core/: Application.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Window.cpp
src/engine/src/Graphics/: OrthographicCamera.cpp  OrthographicCameraController.cpp
src/engine/src/Graphics/Raw/: Texture2D.cpp  VertexArray.cpp
src/engine/src/Graphics/Renderers/: Renderer2D.cpp  RendererAPI.cpp
src/engine/src/ImGui/: ImGuiLayer.cpp
src/network/: CMakeLists.txt
src/network/include/Network/: AVSocket.h  Socket.h
src/network/src/: AVSession.cpp  TLSClient.cpp
src/network/src/Unix/: Socket.cpp
src/network/src/Windows/: Socket.cpp
(+522 files in other folders)
